<resources>
    <string name="app_name">Appmon Control</string>
    <string name="text_welcome">Welcome!</string>
    <string name="text_welcome_action">please, login or register</string>

    <string name="text_login">Sign in</string>
    <string name="text_register">Register</string>
    <string name="text_no_devices">No connected devices</string>
    <string name="text_app_search">Search applications</string>
    <string name="text_change_password">Change password</string>
    <string name="text_change_pin">Change pin</string>
    <string name="text_user_does_not_exist">Invalid user</string>
    <string name="text_wrong_password">Wrong password</string>
    <string name="text_user_exists">User already exists!</string>
    <string name="text_weak_password">Weak password!</string>

    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_app_list">Applications</string>
    <string name="title_activity_device_list">Devices</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_group_account">Account</string>
    <string name="title_group_client_pin">Client devices pin</string>
    <string name="title_group_app_pin">Application pin</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_app_pin">New pin (can be empty)</string>
    <string name="prompt_client_pin">New pin</string>
    <string name="prompt_pin_repeat">Repeat pin</string>
    <string name="prompt_password_repeat">Repeat password</string>
    <string name="prompt_password_new">New password</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="action_settings">Settings</string>
    <string name="text_invalid_email">Invalid e-mail!</string>
    <string name="text_sign_out">Sign out</string>
    <string name="msg_app_pin_changed">Application pin changed successfully</string>
    <string name="msg_client_pin_changed">Client pin changed successfully!</string>
    <string name="msg_password_changed">Password changed successfully!</string>
    <string name="text_different_passwords">Passwords are different!</string>
    <string name="text_weak_pin">Weak pin</string>
    <string name="text_different_pins">Pins are different!</string>
    <string name="text_network_error">Network error</string>
    <string name="text_forgot_password">I forgot password</string>
    <string name="text_password_reset_sent">Password reset e-mail have been sent</string>
    <string name="text_done">Done</string>
    <string name="text_no_applications">No applications</string>
    <string name="text_device_list_sync_error">Device list sync error</string>
    <string name="text_app_list_sync_error">App list sync error</string>
    <string name="text_reauth">Please sign out and log in again</string>
    <string name="enter_pin">Enter pin:</string>
    <string name="pin">Pin</string>
</resources>
